--- a/sass/_aboutUs.scss
+++ b/sass/_aboutUs.scss
@@ -4,7 +4,7 @@
 #WeDo,
 .our-team,
 .our-work {
-    height: 700px;
+    //  height: 700px;
 
     h5 {
         font-size: convertFont(22);
@@ -42,8 +42,7 @@
         color: #999999;
         font-family: "Roboto";
         margin-top: 20px;
-        margin-left: 180px;
-        margin-right: 180px;
+
     }
 
 }
