--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,18 +1,12 @@
-.our-work {
+.our-work,
+.aboutUs {
     .caption i {
         padding: 1.2rem;
-        background-color: #fce38a;
-        color: #f38181;
+        color: #fff;
         font-size: 1.3rem;
-        border-right: 1px solid #f9bd87;
-        border-left: 1px solid #f9bd87;
+
     }
 
-    .caption i:hover {
-        background-color: #ed6566;
-        color: white;
-        border: none;
-    }
 
     .caption {
         position: absolute;
