--- a/sass/_whatWeDo.scss
+++ b/sass/_whatWeDo.scss
@@ -3,11 +3,6 @@
         font-size: convertFont(14);
         font-weight: bold;
     }
-}
-
-.qoute {
-    background-color: #F8F8F8;
-
 
     #carouselExampleControls .carousel-info h6::before {
         top: 50%;
@@ -26,24 +21,17 @@
     .carousel-inner {
         padding-left: 200px;
         padding-right: 200px;
-    }
-
-    .media h6 {
-        padding-left: 60px;
-        font-family: "Kaushan Script";
+        background-color: #F8F8F8;
 
     }
 
-    .media h6::before {
-        bottom: 40px;
-        content: " ";
-        width: 50px;
-        height: 4px;
-        background-color: #f38181;
-        position: absolute;
-        transform: translate(-110%);
-
-    }
-
-
+    h6::before {
+    bottom: 40px;
+    content: " ";
+    width: 50px;
+    height: 4px;
+    background-color: #f38181;
+    position: absolute;
+    transform: translate(-110%);
+}
 }
