--- a/myStyle.scss
+++ b/myStyle.scss
@@ -11,3 +11,6 @@
 @import 'sass/whatWeDo';
 @import 'sass/team';
 @import 'sass/work';
+@import 'sass/people';
+@import 'sass/blog';
+@import 'sass/footer';
