--- a/sass/_aboutUs.scss
+++ b/sass/_aboutUs.scss
@@ -2,8 +2,10 @@
 .services,
 .features,
 #WeDo,
-.our-team,
-.our-work {
+#Team,
+.blog-content,
+.our-work,
+#Clients {
     //  height: 700px;
 
     h5 {
