--- a/sass/_whatWeDo.scss
+++ b/sass/_whatWeDo.scss
@@ -1,37 +1,37 @@
-.wedo {
-    h6 {
-        font-size: convertFont(14);
-        font-weight: bold;
-    }
+// .wedo {
+    //     h6 {
+    //         font-size: convertFont(14);
+    //         font-weight: bold;
+    //     }
 
-    #carouselExampleControls .carousel-info h6::before {
-        top: 50%;
-        left: -20%;
-        transform: translate(20%, -50%);
-    }
+    //     #carouselExampleControls .carousel-info h6::before {
+    //         top: 50%;
+    //         left: -20%;
+    //         transform: translate(20%, -50%);
+    //     }
 
-    #carouselExampleControls .iconContainer .imgCarousel {
-        width: 50%;
-    }
+    //     #carouselExampleControls .iconContainer .imgCarousel {
+    //         width: 50%;
+    //     }
 
-    #carouselExampleControls .iconContainer {
-        vertical-align: top;
-    }
+    //     #carouselExampleControls .iconContainer {
+    //         vertical-align: top;
+    //     }
 
-    .carousel-inner {
-        padding-left: 200px;
-        padding-right: 200px;
-        background-color: #F8F8F8;
+    //     .carousel-inner {
+    //         padding-left: 200px;
+    //         padding-right: 200px;
+    //         background-color: #F8F8F8;
 
-    }
+    //     }
 
-    h6::before {
-    bottom: 40px;
-    content: " ";
-    width: 50px;
-    height: 4px;
-    background-color: #f38181;
-    position: absolute;
-    transform: translate(-110%);
-}
-}
+    //     h6::before {
+    //     bottom: 40px;
+    //     content: " ";
+    //     width: 50px;
+    //     height: 4px;
+    //     background-color: #f38181;
+    //     position: absolute;
+    //     transform: translate(-110%);
+    // }
+    // }
